# smart-course-backend

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  day2-plan.md  docker-compose.yml  main.py  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 2026_07_08_1916_655df2dcef99_initial_schema.py
docker/prometheus/: prometheus.yml
docs/: README.md
docs/architecture/: adr-001-microservices-monorepo.md
docs/guides/: day-01-file-by-file.md  day-02-file-by-file.md  day-03-file-by-file.md  day-04-file-by-file.md  day-05-file-by-file.md
docs/planning/: day-02.md  roadmap.md
docs/product/: prd.md  requirements.md
docs/reference/: configuration.md
services/user_service/: config.py  database.py  dependencies.py  main.py  repository.py  router.py  service.py
shared/config/: settings.py
shared/models/: __init__.py  base.py  course.py  enrollment.py  user.py
shared/schemas/: user.py
shared/utils/: database.py
tests/: conftest.py  test_health.py  test_settings.py  test_user_routes.py  test_user_service.py
